Resolvidos alguns issues em base_engine.py

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,5 @@
+sonar.organization=VioLensOrg
+sonar.projectName=VioLensHelper
 sonar.python.version=3.8.10
+sonar.sources=.
+sonar.exclusions=**/venv/**,**/__pycache__/**
